# PATCH3

./: .gitignore  MASTER.py  MASTER.sh  MASTER_GLAMDRING.sh  MASTER_NERSC.sh  README.md  amend_power_spectra.py  analysis_utils.py  cell_utils.py  clean_catalogues.py  combine_fields.py  compute_covariances.py  compute_power_spectra.py  config.py  config_glamdring.yaml  config_local.yaml  configuration.py  covariances.py  decasu_config_hpix_hsc_dr3.yaml  dir_photozs.py  fit_hods.py  flags.py  flags.yaml  gen_utils.py  hscReleaseQueryDR3.py  make_galaxy_maps.py  make_maps.py  make_maps_from_catalogue.py  make_maps_from_metadata.py  make_maps_from_metadata.slurm  make_sacc_files.py  make_txpipe_inputs.py  map_utils.py  mpi_power_spectra.py  output_utils.py  pca_systematics.py  plot_power_spectra.py  plot_utils.py  required_cols.txt  requirements.txt  (+9 more)
data_query/: field_counts_and_boundaries.fits  get_data.py  hscReleaseQueryDR3.py  pdr3_queries.py  run_COSMOS_DUD.sql
patch3_utils/: README.md  pyproject.toml
patch3_utils/src/: analysis_utils.py  cell_utils.py  map_utils.py  plot_utils.py
patch3_utils/src/patch3_utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pipelines/: config_glamdring.yaml  config_glamdring_colour_split.yaml  config_local.yaml  required_cols.txt
slurm_scripts/: clean_catalogues.sh  combine_fields.sh  compute_power_spectra.sh  fit_hods.sh  get_data.sh  get_data.slurm  make_galaxy_maps.sh  make_maps_from_catalogue.sh  make_maps_from_metadata.sh  make_txpipe_inputs.sh  pca_systematics.sh  plot_power_spectra.sh  split_metadata.sh
