[build-system]
requires = [
	"setuptools>=61.0"
	]
build-backend = "setuptools.build_meta"

[project]
name = "patch3_utils"
version = "0.1.0"
authors = [
	{ name="Thomas Cornish", email="tomcornish1996@gmail.com"}
]
description = "Utilities for the Pipeline for Analysis of Tomographic Clustering with HSC DR3 (PATCH3)"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
	"numpy",
	"scipy",
	"pymaster",
	"healpy",
	"healsparse",
	"h5py",
	"sacc",
	"astropy",
	"matplotlib"
	]

[project.urls]
Homepage = "https://github.com/tmcornish/PATCH3"
Issues = "https://github.com/tmcornish/PATCH3/issues"